# hostbeat-cli

./: .gitignore  Cargo.toml  README.md  dontdie-help.txt  hostbeat-help.txt  install.ps1  install.sh
src/: libs.rs  main.rs  services.rs
src/libs/: settings.rs  system.rs  utils.rs
src/services/: heartbeatservice.rs  settingsservice.rs
