[package]
name = "hostbeat"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
exitcode = "1.1.2"
json = "0.12.4"
regex = "1.7.1"
minreq = { version = "2.6.0", features = ["https-rustls"] }
sysinfo = "0.30.12"
